222 | Fix profile page layouting, update breadcrumb styles on mobile (#226)
* make profile page layout use a grid

* arrange layouting of event message submit

* make padding around pane responsive

* hide breadcrumbs on mobile, scrop long breadcrumbs so left-hand elements don't fold

* align child element of breadcrumbs to the right in the breadcrumb bar on mobile

* make breadcrumb visible and stickied on mobile if there are child elements

* allow for breadcrumbs to have just a < to navigate up on mobile

* show actual button with icon for breadcrumb return on mobile

* narrower mobile breadcrumb back button

--- a/static/buttons.css
+++ b/static/buttons.css
@@ -229,3 +229,13 @@
 .btn-with-icon {
     gap: var(--spacing-2x);
 }
+
+/* Apply as extra style to a .btn element if it only shows icon */
+.btn-icon-only {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: var(--btn-height);
+    width: var(--btn-height);
+    padding: 0;
+}
